fix: significant rework of Event<->IngestDocument marshalling
Fundamentally changes the model for marshalling `Event`s to IngestDocument`s
and back again to solve three inter-related issues:

Resolves: #47
-------------
The `IngestDocument` metadata fields are no longer added to the top-level of
the `Event`, and are now separately routed to `[@metadata][_ingest_document]`,
fixing an issue where the presence of Elasticsearch-reserved fields such as
the top-level `_version` would cause a downstream Elasticsearch output to be
unable to index the event

Resolves: #54
-------------
The top-level `@timestamp` and `@version` fields are no longer excluded from
the `IngestDocument`, as required by some existing integration pipelines

Partially-Resolves: #65
-------------
Field-type conversions have been improved by adding a two-way-mapping between
the Logstash-internal `Timestamp`-type object and the equivalent
`ZonedDateTime`-object used in several Ingest Common processors